execution premier niveau de page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   latlong2: ^0.9.1
   flutter_map_marker_popup: ^7.0.0
   modal_bottom_sheet: ^3.0.0
+  lottie: ^3.2.0
+  blur: ^4.0.0
+  flutter_contacts: ^1.1.9+2
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +76,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+    - assets/lotties/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
