--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,11 +109,11 @@ flutter:
 
 flutter_native_splash:
   color: "#FFFFFF"
-  image: assets/icons/logo.png
+  # image: assets/icons/logo.png
   # branding: assets/branding-production.png
   # branding_bottom_padding: 24
   color_dark: "#FFFFFF"
-  image_dark: assets/icons/logo.png
+  # image_dark: assets/icons/logo.png
   # branding_dark: assets/branding-production.png
 
   android_12:
@@ -126,6 +126,6 @@ flutter_native_splash:
 
 
 # dart run flutter_native_splash:create
-# dart run rename_app:main all="Le Point Relais"
+# dart run rename_app:main all="Relais'Ivoire"
 # dart run flutter_launcher_icons:generate
 # dart run flutter_launcher_icons:main
