--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   flutter_contacts: ^1.1.9+2
   flutter_native_splash: ^2.4.4
   flutter_launcher_icons: ^0.14.3
+  objectbox: ^4.1.0
+  objectbox_flutter_libs: ^4.1.0
+  objectbox_generator: ^4.1.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,7 +84,6 @@ flutter:
     - assets/images/
     - assets/svg/
     - assets/lotties/
-    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
