--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   objectbox_flutter_libs: ^4.1.0
   objectbox_generator: ^4.1.0
   jwt_decoder: ^2.0.1
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
