--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   connectivity_plus: ^6.1.3
 
+  http: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
