--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,6 @@ dependencies:
   flutter_svg: ^2.0.10+1
   gif: ^2.3.0
   flutter_animate: ^4.5.0
-  flutter_map: ^7.0.2
-  latlong2: ^0.9.1
-  flutter_map_marker_popup: ^7.0.0
   modal_bottom_sheet: ^3.0.0
   lottie: ^3.2.0
   blur: ^4.0.0
@@ -56,8 +53,13 @@ dependencies:
   objectbox_generator: ^4.1.0
   jwt_decoder: ^2.0.1
   connectivity_plus: ^6.1.3
-
   http: any
+  cinetpay: ^1.0.8
+  qr_flutter: ^4.1.0
+  geolocator: ^13.0.4
+  geolocator_android: ^4.6.2
+  google_maps_flutter: ^2.10.1
+  permission_handler: ^12.0.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
