Refactor UI and functionality across multiple pages
- Adjusted padding in Login_number.dart for better layout.
- Reduced OTP timer duration from 60 to 30 seconds in OTP_page.dart.
- Enhanced ProfilPage.dart with navigation and dynamic user data display.
- Updated Tip.dart to include tap functionality and improved layout.
- Modified map_button.dart to support onTap functionality.
- Improved parametre_page.dart with better navigation and dynamic data handling.
- Enhanced search_lpr.dart to support dynamic points relais and improved map handling.
- Added patch method in ApiService.dart for updating resources.
- Updated SessionService.dart to handle user connection status more effectively.
- Enhanced SyncService.dart for better data synchronization and handling.
- Added new widgets: HistoriqueBloc.dart for displaying colis history.
- Created PalierClient.dart model for client tiers.
- Implemented ChangeInfosPage.dart for updating user information.
- Developed ChangeNumberPage.dart for changing user phone number with confirmation dialog.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,11 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Nous avons besoin de votre position pour afficher les points relais.</string>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>Nous avons besoin de votre position pour la livraison.</string>
+		<key>io.flutter.embedded_views_preview</key>
+		<true/>
 	</dict>
 </plist>
