--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   permission_handler: ^12.0.0+1
   lit_relative_date_time: ^1.2.0
   timeago: ^3.7.0
+  intl: ^0.19.0
+  intl_translation: ^0.20.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -89,6 +91,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+    - assets/icons/
     - assets/lotties/
 
   # An image asset can refer to one or more resolution-specific "variants", see
