feat: Add notification system with animated icon and sync functionality
- Implemented NotificationClient model and controller for managing notifications.
- Added AnimatedNotificationIcon widget for displaying notifications with animation.
- Integrated notification synchronization in SyncService.
- Updated NotificationsPage to reflect real-time notification count.
- Enhanced ListeColisPage to utilize the new notification icon.
- Added error handling for zero results in ItineraireMapPage.
- Updated API base URL for development environment.
- Minor UI adjustments in various pages for better spacing and layout.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,6 +52,9 @@
 		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 		<string>Nous avons besoin de votre position pour la livraison.</string>
 		<key>io.flutter.embedded_views_preview</key>
+		<key>NSLocalNetworkUsageDescription</key>
+		<string>Permet à l'application de communiquer via le réseau local pour les fonctionnalités de debug.</string>
+
 		<true/>
 	</dict>
 </plist>
