--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   timeago: ^3.7.0
   intl: ^0.19.0
   intl_translation: ^0.20.1
+  firebase_core: ^3.13.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
