--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,9 +52,27 @@
 		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 		<string>Nous avons besoin de votre position pour la livraison.</string>
 		<key>io.flutter.embedded_views_preview</key>
+		<true/>
 		<key>NSLocalNetworkUsageDescription</key>
 		<string>Permet à l'application de communiquer via le réseau local pour les fonctionnalités de debug.</string>
+		<key>FirebaseAppDelegateProxyEnabled</key>
+		<false/>
 
-		<true/>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
+		</dict>
+
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>remote-notification</string>
+		</array>
+
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
+		</dict>
 	</dict>
 </plist>
