--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,11 @@ dependencies:
   intl: ^0.19.0
   intl_translation: ^0.20.1
   firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.1.0
+  vibration: ^3.1.3
+  path_provider: any
+  awesome_notifications: ^0.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
