--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   flutter_local_notifications: ^19.1.0
   vibration: ^3.1.3
   path_provider: any
+  otp_autofill: ^4.1.0
+  flutter_compass: ^0.8.1
   # awesome_notifications: ^0.10.0
 dev_dependencies:
   flutter_test:
