--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-     "name": "Le Point Relais",
-     "short_name": "Le Point Relais",
+     "name": "Relais'Ivoire",
+     "short_name": "Relais'Ivoire",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#0175C2",
