--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   awesome_notifications_core: ^0.10.1
   awesome_notifications_fcm: ^0.10.1
   rename_app: ^1.6.3
+  kkiapay_flutter_sdk: ^1.3.4
   
 dev_dependencies:
   flutter_test:
