--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,19 @@
     <true/>
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Cette application a besoin de votre position pour afficher les lieux à proximité.</string>
+
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Cette application a besoin de votre position même en arrière-plan pour offrir toutes ses fonctionnalités.</string>
+
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>remote-notification</string>
+    </array>
+
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <true/>
+
   </dict>
 </plist>
