feat: Update project identifiers and Firebase configurations
- Changed iOS bundle identifier in GoogleService-Info.plist and firebase_options.dart to "com.relaisivoir.app" and "com.relaisivoir.lpr" respectively.
- Updated Runner.xcscheme to include custom LLDB init file.
- Modified ApiService to use the production BASE_URL.
- Commented out notification service initialization in main.dart and FirebaseService.dart.
- Removed awesome_notifications dependencies from pubspec.yaml and related generated files.
- Updated macOS and Linux project identifiers to "com.relaisivoir.lpr".
- Updated copyright information in AppInfo.xcconfig and Runner.rc.
- Updated pubspec.lock to reflect dependency changes and version updates.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <application android:label="Relais'Ivoir" android:name="${applicationName}" android:icon="@mipmap/ic_launcher" android:usesCleartextTraffic="true">
 
-        <receiver android:name="com.example.otp_autofill.OTPReceiver" android:exported="true">
+        <receiver android:name="com.relaisivoir.otp_autofill.OTPReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
