--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -59,5 +59,9 @@
     <key>FirebaseAppDelegateProxyEnabled</key>
     <true/>
 
+    <key>io.flutter.embedded_views_preview</key>
+    <true/>
+
+
   </dict>
 </plist>
