--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -62,6 +62,7 @@
     <key>io.flutter.embedded_views_preview</key>
     <true/>
 
-
+    <key>NSContactsUsageDescription</key>
+    <string>Nous avons besoin d'accéder à vos contacts</string>
   </dict>
 </plist>
