--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,17 +37,11 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    bundle {
-        language {
-        enableSplit = true
-        }
-        density {
-        enableSplit = true
-        }
-        abi {
-        enableSplit = true
-        }
-    }
+    // bundle {
+    //     language { enableSplit = false }
+    //     density { enableSplit = false }
+    //     abi { enableSplit = false }
+    // }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -56,7 +50,7 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion 35
-        versionCode 2
+        versionCode 6
         versionName "1.0.0"
         multiDexEnabled true
         
@@ -66,7 +60,7 @@ android {
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile file("key.jks")
+            storeFile file("relaisivoir-release-key.jks")
             storePassword keystoreProperties['storePassword']
         }
     }
